# term-note

./: Cargo.toml  README.md  install.ps1  release.yml
.github/workflows/: release.yml
src/: main.rs
src/app/: mod.rs
src/db/: mod.rs
src/models/: mod.rs  note.rs  search.rs
src/ui/: mod.rs  theme.rs
src/utils/: mod.rs
